--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,25 +5,30 @@
   <title>Instagram</title>
 </head>
 <body>
-    <div id="site-title">
-        <img class ="" src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/brand.png">
-        <img class ="" src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/home.png">
-          <p class="box-style">
-            Log In
-          </p>
-     </div>
-        <div id="body-style">
-          <img src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/phones.png">
-          <img src ="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/frame.png">
-            <h1>Capture and Share the World's Moments</h1>
-              <p>
-                  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way share your life with friends and family. <br>
-                  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
-                  Oh yeah, did we mention it's free?
-                  Download on the App Store
-                  Get it on Google Play
-              </p>
-        </div>
+<div id="border-style"></div>
+<div class ="main-body">
+  <div id="phone-style">
+    <img class="phone" src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/phones.png">
+  </div>
+  <div id="logo-style">
+    <img class="logo" src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/brand.png">
+    <img class="login" src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/home.png">  
+    <p>
+    Log In
+    </p>
+    </div>
+    <div>
+    <img src ="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/frame.png">
+    <h1>Capture and Share the World's Moments</h1>
+      <p>
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way share your life with friends and family. <br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+        Oh yeah, did we mention it's free?
+        Download on the App Store
+        Get it on Google Play
+      </p>
+  </div>
+
   <nav id="site-nav">
     <ul>
       <li>About Us</li>
@@ -40,5 +45,6 @@
   <footer id="site-footer">
     &copy; 2014 Instagram 
   </footer>
+</div>
 </body>
 </html>
