--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="wrapper">
+    <div id="cover">
+      <div id="cover-image">
+        <img src="./images/phones.png" alt="Smartphones" />
+      </div>
+      <div id="cover-info">
+        <div id="welcome">
+          <img id="logo" src="./images/brand.png" alt="Brand Logo" />
+          <div id="buton-ini">
+            <a href="#">
+              <p><img src="./images/home.png" alt="Home Button" />Log In</p>
+            </a>
+          </div>
+        </div>
+        <div id="message">
+          <h2>Capture and Share<br> the World's Moments</h2>
+          
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
+            <br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+            <br>
+            Oh yeah, did we mention it's free?
+          </p>
+          
+            <!-- Download on the App Store
+            Get it on Google Play -->
+        </div>
+      </div>
+    </div>
+    <footer id="site-footer">
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      &copy; 2014 Instagram
+    </footer>
+  </div>
 </body>
 </html>
