--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   Instagram
