--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,24 +5,26 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <main class="content">
-    <img src="images/phones.png" alt="phone using instagram">
-    <div>
+  <main class="container">
+    <img class="phones" src="images/phones.png" alt="phone using instagram">
+    <div class="ig-content">
       <div class="ig-brand">
-        <img src="images/brand.png" alt="instagram logo">
-        <button><img src="images/home.png" alt="">Log in</button>
+        <img class="ig-logo" src="images/brand.png" alt="instagram logo">
+        <button type="button" class="login"><img src="images/home.png" alt="">Log in</button>
+        <div class="clearfix"></div>
       </div>
       <div class="ig-info">
-        <h1>Capture and Share the World's Moments</h1>
+        <h1>Capture and Share<br>the World's Moments</h1>
         <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p> 
-        <div class="ig-download">
-          <img src="images/badge-iphone.png" alt="download from apple store">
-          <img src="images/badge-android.png" alt="download from google play">
-        </div>
+        
+          <img class="ig-download" src="images/badge-iphone.png" alt="download from apple store">
+          <img class="ig-download" src="images/badge-android.png" alt="download from google play">
+        
       </div>
     </div>
+    <div class="clearfix"></div>
   </main>
   <footer class="footer">
     <a href="#" class="footer-link">About Us</a>
