--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,22 +17,21 @@
   <h1><img src="../starter-code/images/brand.png" alt="brand icon"></h1>
   
   <div class="info-instagram">
-  <div classe="box-info-instagram">
+    
+  <div class="box-info-instagram">
   <h2>Capture and Share </br>the World's Moments</h2>
 
-  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
   <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
   <p>Oh yeah, did we mention it's free?</p>
 
-  <div class="button">
-  Download on the App Store
+  <div class="box-buttons">
+      <img class='box-img-button' src="../starter-code/images/badge-iphone.png" alt="Download on the App Store">
+      <img class='box-img-button' src="../starter-code/images/badge-android.png" alt="Get it on Google Play">
   </div>
 
-  <div class="button">
-  Get it on Google Play
-  </div>
   </div>
   </div>
   
