--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -35,7 +35,7 @@
     <a href="#" class="footer-link">Jobs</a>
     <a href="#" class="footer-link">Privacy</a>
     <a href="#" class="footer-link">Terms</a> 
-    &copy; 2014 Instagram
+    <span class="copyright">&copy; 2014 Instagram</span>
   </footer>
 </body>
 </html>
