--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="main">
+    <div class="half-top">
+      <div class="container">
+        <div class="right-half">
+          <img src="images/phones.png" alt="image mobile phones">
+        </div>
 
-  Capture and Share the World's Moments
+        <div class="left-half">
+          <div class="left-half-top">
+            <div class="logo">
+              <img src="images/brand.png" alt="instagram logo"><a class="button" href="#">Log in</a>
+            </div>
+          </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <div class="left-half-text">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="shops"><img src="images/badge-iphone.png" alt="image download on the app store">
+              <img src="images/badge-android.png" alt="image get it on google play"></div>
+          </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </div>
+      </div>      
+    </div>
+    <div class="footer">
+      <ul class="footer-menu">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>  
 </body>
 </html>
