--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,25 +7,25 @@
 </head>
 <body>
   <div>
-    <img class="brand" src="/home/alfio/IronHack /Modulo 1/lab-css-instagram-clone-master/starter-code/images/brand.png" alt="">
+    <img class="brand" src="images/brand.png" alt="">
     <div id = "login">
-    <img class="home" src="/home/alfio/IronHack /Modulo 1/lab-css-instagram-clone-master/starter-code/images/home.png" alt="">
+    <img class="home" src="images/home.png" alt="">
     <b>  Log in </b>
     </div>
     <div class = "Phone">
-    <img  src="/home/alfio/IronHack /Modulo 1/lab-css-instagram-clone-master/starter-code/images/phones.png" alt="">
+    <img  src="images/phones.png" alt="">
 </div>
 <div>
-   <img class="frame" src="/home/alfio/IronHack /Modulo 1/lab-css-instagram-clone-master/starter-code/images/frame.png" alt="">
+   <img class="frame" src="images/frame.png" alt="">
       <div class = "parrafo"> 
         <h2 class = "tittle" >Capture and Share the World's Moments</h2><br>
         <p> Instagram is a <b>fast, beautiful</b> and fun way to share your life with friends and family. <br> <br> Take a picture or video, choose a
         filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter,
         Tumblr and more. It's a new way to see the world. <br> <br>  Oh yeah, did we mention it's free? </p>
        <br>
-      <img class="badge-iphone" src="/home/alfio/IronHack /Modulo 1/lab-css-instagram-clone-master/starter-code/images/badge-iphone.png"
+      <img class="badge-iphone" src="images/badge-iphone.png"
         alt="">
-      <img class="badge" src="/home/alfio/IronHack /Modulo 1/lab-css-instagram-clone-master/starter-code/images/badge-android.png"
+      <img class="badge" src="images/badge-android.png"
         alt="">
       </div>
 </div>
