--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -33,6 +33,7 @@
   </div>  
 </div>
 <div id="botton-container"> 
+  <div class="list-container">
   <div class="three">
       <ul>
         <nav>
@@ -48,6 +49,7 @@
         <li>&copy; 2014 Instagram</li>
       </ul>
     </div>
+  </div>
   </div> 
   </div>
 </body>
