--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,14 +13,14 @@
   <div id="logo-style">
     <img class="logo" src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/brand.png">
     <img class="login" src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/home.png">  
-    <p>
-    Log In
+    <p class="login-button">
+    Log in
     </p>
     </div>
     <div>
     <img src ="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/frame.png">
-    <h1>Capture and Share the World's Moments</h1>
-      <p>
+    <h1>Capture and Share the <br> World's Moments</h1>
+      <p class ="paragraph-style">
         Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way share your life with friends and family. <br>
         Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
         Oh yeah, did we mention it's free?
@@ -30,7 +30,7 @@
   </div>
 
   <nav id="site-nav">
-    <ul>
+    <ul list-style="none">
       <li>About Us</li>
       <li>Support</li>
       <li>Blog</li>
