PAR - Arthur de Carné - Instagram clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,59 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet">
+  <link rel="shortcut icon" type="image/x-icon" href="https://www.instagram.com/static/images/ico/favicon.ico/dfa85bb1fd63.ico" />
 </head>
 <body>
-  Instagram
+  <div id="container-global">
 
-  Capture and Share the World's Moments
+    <div id="iphone-img">
+      <img src="images/phones.png">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div id="content_left">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div id="header-content">
+        <img src="images/brand.png" alt="Instagram logo" id="logo">
 
-  Oh yeah, did we mention it's free?
+        <div id="button">
+          <img src="images/home.png">
+         <a href="#">Log in</a>
 
-  Download on the App Store
-  Get it on Google Play
+        </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      </div>
 
-  &copy; 2014 Instagram
+      <div id="content-text">
+        <h2>Capture and Share </br>the World's Moments</h2>
+        <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <ul>
+          <li><a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a></li>
+          <li><a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a></li>
+        </ul>
+      </div>
+
+    </div>
+
+  </div>
+
+  <div id="footer">
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </div>
+
+
+
 </body>
 </html>
