--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,22 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+	<div id="content">
+		<div class="left-side">
+			<image src="images/phones.png"/>
+		</div>
+		<div class="right-side">
+			<div class="top">
+				<div class="top-left">
+					<img src="images/brand.png"/>
+				</div>
+				<div class="top-right">
+					<a class="log-in" href="#"><img src="images/home.png"/><span>Log in</span></a>
+				</div>
+			</div>			
+			<div class="main">
+			
+				<h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+				<p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+				  <br/><br/>
+				  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+				  <br/><br/>
+				  Oh yeah, did we mention it's free?</p>
+				  
+				<div class="download">
+						<img src="images/badge-iphone.png"/>
+					
+						<img class="download-right" src="images/badge-android.png"/>
+					</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
+			</div>
+		</div>
+		<div class="clear-fix"/>
+		<div>
+		 About Us
   Support
   Blog
   Press
@@ -27,5 +48,8 @@
   Terms
 
   &copy; 2014 Instagram
+		</div>
+	</div>
+  
 </body>
 </html>
