--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="background">
+    <div class="box">
+        <img src="images/phones.png">
+      <div class="above">
+          <div class="instagram">
+            <img src="images/brand.png">
+            <button class="button">
+							<img src="images/home.png"><span id="login">Log In</span>
+            </button>
+          </div>
+         <div class="text">
+           <h2>Capture and Share <br> the World's Moments</h2>
+           <p>Instagram is a <b> fast, beautiful </b> and <b>fun</b> way to share your life with friends and family. </p>
+           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+                it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+           <p>Oh yeah, did we mention it's free?</p>
+           <div class="stores">
+             <a><img src="images/badge-iphone.png"></a>
+             <a><img src="images/badge-android.png"></a>
+           </div>
+         </div>
+        </div>
+    </div>
+      <footer class="footer">
+        <ul class="liste">
+          <li>ABOUT US</li>
+          <li>SUPPORT</li>
+          <li>BLOG</li>
+          <li>PRESS</li>
+          <li>API</li>
+          <li>JOBS</li>
+          <li>PRIVACY</li>
+          <li>TERMS</li>
+          <li id="copy">&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+  </div>
 </body>
 </html>
