--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
-  Instagram
+<div class ="context">
+  <div class = "img_phone">
+    <img src="images/phones.png" alt="iphone">
+  </div>
+  <section class = "right_context">
+    <div class ="row img_bottom">
+      <img src="images/brand.png" alt="item instagram">
+      <div class="icon_login">
+        <button id="btn_login"><span class="icon"></span>Log in</button>
+      </div>
+    </div>
+    <div class = "description">
+      <h3>Capture and Share<br/>the World's Moments</h3>
+      <p>Instagram is a <span class="words_bold">fast</span>,<span class="words_bold"> beautiful</span> and <span class="words_bold">fun</span> way to share your life with friends and family.<br/><br/>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br/><br/>
+      Oh yeah, did we mention it's free?</p>
+      <div class = "img_item">
+        <img src="images/badge-iphone.png" alt="dow AppStore">
+        <img src="images/badge-android.png" alt="google play ">
+      </div>
+    </div>
+  </section>
+  <footer class="footer text-center">
+    <a href="">About Us</a>      
+    <a href="">Support</a>
+    <a href="">Blog</a>
+    <a href="">Press</a>
+    <a href="">API</a>
+    <a href="">Jobs</a>
+    <a href="">Privacy</a>
+    <a href="">Terms</a>
+    <span>&copy; 2014 Instagram</span>
+  </footer>
+</div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+  
 </body>
 </html>
