--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,6 +5,13 @@
   <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+  <div class="center">
+    <div class="mobile">
+      <img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/phones.png" alt="iPhones">
+    </div>
+    <div class="secondHeader">
+      <div class="instagram"><img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram" class="rightCorner"></div><div class="button"><button style="background-color: #1c5380" class="button"><img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/home.png" alt="Home">Log in</button></div>
+    </div>
   Instagram
 
   Capture and Share the World's Moments
@@ -17,6 +24,7 @@
 
   Download on the App Store
   Get it on Google Play
+  </div>
 
   About Us
   Support
