--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -21,19 +21,20 @@
     <img class="frame" src ="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/frame.png">
     <h1>Capture and Share the <br> World's Moments</h1>
       <p class ="paragraph-style">
-        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way share your life with friends and family. <br>
-        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way share your life <br> with friends and family. <br>
+        <br>
+        Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br>new way to see the world.<br>
+        <br>
         Oh yeah, did we mention it's free?
         
       </p>
+      <div class="google">
+          <img src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/badge-android.png">
+        </div>
       <div class="apple">
-          Download on the App Store
           <img src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/badge-iphone.png">
       </div>
-      <div class="google">
-        Get it on Google Play
-        <img src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/badge-android.png">
-      </div>
+      
   </div>
 
   <nav id="site-nav">
