--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="./css/main.css">
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+<div class="container">
+  <div class="blue-header"></div>
+  <div class="main">
+    <div class="phone-image">
+      <img src="./images/phones.png"/>
+    </div>
+   <div class="right-cnt"> 
+    <div class="logo">
+      <img class="lg-ig" src="./images/brand.png"/>
+      <button class="button">Log In</button>
+    </div>
+    <div class="abt">
+      
+     <h2> Capture and Share the World's Moments</h2> 
+    <p>Instagram is a<b> fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+       You can even share to Facebook, Twitter, Tumblr and more. 
+       It's a new way to see the world.</p>
+       <p>Oh yeah, did we mention it's free?</p>
+  </div>
+  <div class="app">
+  <img src="./images/badge-iphone.png"/>
+  <img src="./images/badge-android.png"/>
+  </div>
+  </div> 
+</div>
+<footer>
+    <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <h3>&copy; 2014 Instagram</h3>
+</footer>
+</div>
 </body>
 </html>
