--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,7 +10,8 @@
       <img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/phones.png" alt="iPhones">
     </div>
     <div class="secondHeader">
-      <div class="instagram"><img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram" class="rightCorner"></div><div class="button"><button style="background-color: #1c5380" class="button"><img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/home.png" alt="Home">Log in</button></div>
+      <div class="instagram"><img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram" class="rightCorner"></div>
+      <div class="button"><button style="background-color: #1c5380" class="button"><img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/home.png" alt="Home">Log in</button></div>
     </div>
   Instagram
 
@@ -25,16 +26,18 @@
   Download on the App Store
   Get it on Google Play
   </div>
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<footer class="footer">
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
+  <a href="#">&copy;
+  2014 
+  Instagram</a>
+</footer>
 </body>
 </html>
