--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="blue"></div>
+  <div class="main-div">
+    <div class="phone">
+      <img src="images/phones.png" width="100%"
+      height="100%">
+      
+    </div>
+    <div class="main-text">
+        <div class="logo">
+        <div class="brand"><img src="images/brand.png"alt="Instagram-logo">
+        </div>
+        <div class="button-box">
+            <button class="button"><img src="images/home.png">Log In</button>
+        </div>
+          </div>
+  <div class="words">
+    <h2>Capture and Share<br> the World's Moments. </h2>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
 
   Oh yeah, did we mention it's free?
+    
+  </p>
+</div>
+<div id="download-badge"><img src="images/badge-iphone.png">
+  <img src="images/badge-android.png"></div>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
+  <footer id="extras">
+    About Us
   Support
   Blog
   Press
@@ -27,5 +46,6 @@
   Terms
 
   &copy; 2014 Instagram
-</body>
+</footer>
+</div></body>
 </html>
