--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div id="site-header">
+    <div id="background-top"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="container">
+      <div class="container-left floating">
+        <img src="./images/phones.png" alt=""/>
+      </div>
+      <div class="container-right floating">
+          <div class="floating" id="logo">        
+            <img src="./images/brand.png" alt=""/>
+          </div>
+          <div class="floating-right">
+            <button class="button-element"><img src="./images/home.png" alt=""/> <span>Log in</span></button>
+          </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <div class="box-content">
+            <h1>  Capture and Share </br> the World's Moments</h1>
+            <p>  Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+              </br>
+               <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              </br>
+               <p> Oh yeah, did we mention it's free?</p>
+                
+          </div>
+      
+       </div>
+       <div class="boxes"> 
+          <img src="./images/badge-iphone.png" alt="Download on the App Store"/>
+          <img src="./images/badge-android.png" alt="Get it on Google Play"/>
+        </div>
+     </div>
 
-  Oh yeah, did we mention it's free?
+    <footer class="footing">
+      <ul class="footer-list floating">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
 
-  Download on the App Store
-  Get it on Google Play
+      <p class="floating">&copy; 2014 Instagram</p>
+    </footer> 
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  
+
+
+
+
+  
+  </div>
 </body>
 </html>
