ejercicio web Instagram

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
+
+
+
+
 <body>
-  Instagram
+  <main>
+    <div class="cont-columna">
 
-  Capture and Share the World's Moments
+      <div class="columna columna-5">
+        <img src="images/phones.png" alt="Phone">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="columna columna-7">
+       <div class= "instagram"> <img src="images/brand.png" alt="Instagram"></div>
+      <div class= "login-button"> <button> Login <img src="images/home.png" alt="Button"> </button> </div>  
+      <div class="clearfix"></div>
+        <h1>Capture and Share the World's Moments</h1>
 
-  Oh yeah, did we mention it's free?
+            <div><p1> Instagram is a
+              <strong>fast, beautiful</strong> and <strong> fun </strong> way to share your life with friends and family.</p1></div>
 
-  Download on the App Store
-  Get it on Google Play
+        <div>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You
+        can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        
+        <div>Oh yeah, did we mention it's free?</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      </div>
 
-  &copy; 2014 Instagram
+        <img src="images/badge-iphone.png" alt="Download on the App Store">
+
+        <img src="images/badge-android.png" alt="Get it on Google Play">
+
+      </div>
+
+     <div class="clearfix"></div>
+
+    </div>
+
+   
+
+  </main>
+
+  <footer>
+    About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+  </footer>
 </body>
+
+
+
+
+
 </html>
