--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -36,32 +36,33 @@
             Oh yeah, did we mention it's free?
           </p3>
         </div>
+        <div class="socialmedia">
         <div class="apple">
           <img src="/Users/alvaromartinez/IronHack/M1/lab-css-instagram-clone/starter-code/images/badge-iphone.png">
         </div>
       <div class="android">
           <img src="/Users/alvaromartinez/IronHack/M1/lab-css-instagram-clone/starter-code/images/badge-android.png">
-
-      </div>
+        </div>
+        </div>
       </div>
       </div>
     </section>
-    <footer>
+    <footer class="lista">
         <ul>
           <li>
           <a href="">About Us</a>
           </li>
           <li>
-              <a href="">About Us</a>
+              <a href="">Support</a>
           </li>
           <li>
-              <a href="">About Us</a>
+              <a href="">Blog</a>
           </li>
           <li>
-              <a href="">About Us</a>
+              <a href="">Press</a>
           </li>
           <li>
-              <a href="">About Us</a>
+              <a href="">API</a>
           </li>
           <li>
               <a href="">Jobs</a>
