--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,9 +18,8 @@
         <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p> 
-        
-          <img class="ig-download" src="images/badge-iphone.png" alt="download from apple store">
-          <img class="ig-download" src="images/badge-android.png" alt="download from google play">
+        <a href="#"><img class="ig-download" src="images/badge-iphone.png" alt="download from apple store"></a>
+        <a href="#"><img class="ig-download" src="images/badge-android.png" alt="download from google play"></a>
         
       </div>
     </div>
