--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,22 +2,26 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel=StyleSheet href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="header">
+    <img src="images/instagram-text-logo.png" / width="75%">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="description" height="600px">
+    <left><img src="images/phones.png"></left>
+    <h2>Capture and Share the World's Moments</h2>
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</p></div>
+  <div class="button" id="iphone"><button></button></div>
+  <div class="button" id="android"><button></button></div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
+  <footer>About Us
   Support
   Blog
   Press
@@ -27,5 +31,6 @@
   Terms
 
   &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
