--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <main>
+    <div class="contenedor-columnas">
+      <div class="columna columna-5">
+        <img src="images/phones.png" alt=" ">
+      </div>
+      <div class="columna columna-7">
+        <div class="logo"><img src="images/brand.png" alt=""></div>
+        <div class="button">
+          <button>
+<img src="images/home.png" alt="">
+Login
 
-  Capture and Share the World's Moments
+          </button>
+        </div>
+        <div class="clearfix">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="caja-blanca">
+  <h1>capture and Share the World's Moments</h1>
+<p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+<p>Oh yeah, did we mention it's free?</p>
+<div class="image-app-store">
+  <img src="images/badge-android.png" alt="Download on the App Store">
+  <img src="images/badge-iphone.png" alt="Get it on Google Play">
+</div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</div>
+  </div>
+</div>
+<div class="clearfix">
+</div>
+</main>
+<footer>
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="">API</a>
+  <a href="">Jobs</a>
+  <a href="">Privacy</a>
+  <a href="">Terms</a>
 
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
