--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+  <meta charset="utf-8">
   <title>Instagram</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
-</html>
+  <div id="azul">
+    
+  </div>
+  <section id="banner">
+    <div id="iphone">
+      <img src="images/phones.png" alt="">
+    </div>
+    <div id="cont">
+      <div id="sign">
+        <div id="div-img">
+          <img src="images/brand.png" alt="">
+        </div>
+        <a href="#">
+          <img src="images/home.png" alt="">
+          Log in
+        </a>
+      </div>
+      <div id="cont-info">
+        <img src="images/frame.png" alt="">
+        <div id="pos-a">
+          <h1> Capture and Share <span>the World's Moments</span></h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun </strong>way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p id="p-3">Oh yeah, did we mention it's free?</p>
+          <a id="a-1" href="#">
+            <img src="images/badge-iphone.png" alt="">
+          </a>
+          <a href="#">
+            <img src="images/badge-android.png" alt="">
+          </da>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+    </footer>
