Final version: footer updated. Dificultad encontrada: tiempo muy justo. Dudas resueltas.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,14 +7,14 @@
 <body>
   <div class="center">
     <div class="mobile">
-      <img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/phones.png" alt="iPhones">
+      <img src="images/phones.png" alt="iPhones">
     </div>
     <div class="secondHeader">
-      <div class="instagram"><img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram" class="rightCorner"></div>
-      <div class="button"><button style="background-color: #1c5380" class="button"><img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/home.png" alt="Home">Log in</button></div>
+      <div class="instagram"><img src="images/brand.png" alt="Instagram" class="rightCorner"></div>
+      <div class="button"><button style="background-color: #1c5380" class="button"><img src="images/home.png" alt="Home">Log in</button></div>
     </div>
     <div class="container">
-      <img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/frame.png" alt="frame" class="frame" >
+      <img src="images/frame.png" alt="frame" class="frame" >
       <div class="text">
       <p class="text">
             Instagram
@@ -29,12 +29,12 @@
           
             Download on the App Store
             Get it on Google Play
+            <img class=" footerimages" src="images/badge-iphone.png" class="apple">
+            <img class="footerimages2" src="images/badge-android.png" class="android">
           </p>
         </div>
       </div>
         <div class="footerimages">
-          <img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/badge-iphone.png" class="apple">
-          <img src="/Users/lucasmartin/Desktop/lab-css-instagram-clone/starter-code/images/badge-android.png" class="android">
         </div>
     </div>
     </div>
